tests/miniJava/pos/000646_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( false ) if ( 0 ) { } else { } else java [ 0 ] = 0 ; } }
