tests/miniJava/neg/003421_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java Main [ 0 ] = 0 ; } }
